# QImageViewer

./: .gitignore  CMakeLists.txt  README.md
MainProject/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
PluginDev/ImageIO/: CMakeLists.txt  ImageIO.cpp  ImageIO.h
PluginDev/ImageTabWidget/: CMakeLists.txt  ImageTabWidget.cpp  ImageTabWidget.h  ImageViewer.cpp  ImageViewer.h
PluginSDK/: CMakeLists.txt
PluginSDK/Include/: PlatformResources.h  PluginOperation.h  Splash.h
PluginSDK/Src/: PlatformResources.cpp  PluginOperation.cpp  Splash.cpp
